# fastapi-docs

./: .editorconfig  .md5  DEVELOP.md  README.md  dkbuild.yml  example_app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
fastapi_docs/: __init__.py  config.py  models.py  renderer.py  router.py  search.py  tree.py
fastapi_docs/templates/: document.html
sample_docs/: index.md
sample_docs/api/: index.md  webhooks.md
tests/: test_fastapi_docs_import.py  test_renderer.py  test_router.py  test_tree.py
