[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-docs"
version = "0.1.0"
description = "A markdown documentation renderer for FastAPI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
]
keywords = ["fastapi", "documentation", "markdown"]

dependencies = [
    "fastapi>=0.100.0",
    "python-frontmatter>=1.0.0",
    "markdown>=3.4.0",
    "Pygments>=2.15.0",
    "Jinja2>=3.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "uvicorn>=0.22.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fastapi-docs"
Documentation = "https://github.com/yourusername/fastapi-docs#readme"
Repository = "https://github.com/yourusername/fastapi-docs"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=fastapi_docs --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
